--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -18,22 +18,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "664e3c1f",
+   "id": "2aa6ce59",
    "metadata": {},
    "source": [
-    "Import the data provided in the `establishments.json` file from your Terminal. Name the database `uk_food` and the collection `establishments`.\n",
-    "\n",
-    "Within this markdown cell, copy the line of text you used to import the data from your Terminal. This way, future analysts will be able to repeat your process.\n",
-    "\n",
-    "e.g.: Import the dataset with `YOUR IMPORT TEXT HERE`"
+    "<img src=\"Resources/image/data_import.PNG\" alt=\"Data Import\" width=\"1000\" height=\"800\">"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "3ecdd008",
+   "cell_type": "markdown",
+   "id": "84bca6a5",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Import dependencies\n",
     "from pymongo import MongoClient\n",
@@ -624,7 +618,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -638,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
