modified NoSQL_setup_starter.ipynb markup

--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -21,7 +21,9 @@
    "id": "2aa6ce59",
    "metadata": {},
    "source": [
-    "<img src=\"Resources/image/data_import.PNG\" alt=\"Data Import\" width=\"1000\" height=\"800\">"
+    "<img src=\"Resources/image/data_import.PNG\" alt=\"Data Import\" width=\"1000\" height=\"800\">\n",
+    "\n",
+    "Import the dataset with `mongoimport --type json -d uk_food -c establishments --drop --jsonArray establishments.json`"
    ]
   },
   {
